k8s_files/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-services
  labels:
    app: appointment-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-services
  template:
    metadata:
      labels:
        app: appointment-services
    spec:
      containers:
      - name: appointment-services
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-services
  labels:
    app: authentication-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-services
  template:
    metadata:
      labels:
        app: authentication-services
    spec:
      containers:
      - name: authentication-services
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-services
  labels:
    app: chat-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-services
  template:
    metadata:
      labels:
        app: chat-services
    spec:
      containers:
      - name: chat-services
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-ml-analytics-python
  labels:
    app: ai-ml-analytics-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-ml-analytics-python
  template:
    metadata:
      labels:
        app: ai-ml-analytics-python
    spec:
      containers:
      - name: ai-ml-analytics-python
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/ai_ml
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-services-ms
  labels:
    app: notification-services-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-services-ms
  template:
    metadata:
      labels:
        app: notification-services-ms
    spec:
      containers:
      - name: notification-services-ms
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-services-ms
  labels:
    app: patient-services-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-services-ms
  template:
    metadata:
      labels:
        app: patient-services-ms
    spec:
      containers:
      - name: patient-services-ms
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: physician-management-ui-ux
  labels:
    app: physician-management-ui-ux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: physician-management-ui-ux
  template:
    metadata:
      labels:
        app: physician-management-ui-ux
    spec:
      containers:
      - name: physician-management-ui-ux
        image: 463470954735.dkr.ecr.us-east-1.amazonaws.com/patient_management_ui:latest
        ports:
        - containerPort: 3000
