k8s_files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-1
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
  labels:
    app: service-2
spec:
  ports:
  - name: http
    port: 3002
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-2
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-3
  labels:
    app: service-3
spec:
  ports:
  - name: http
    port: 3003
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-3
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-4
  labels:
    app: service-4
spec:
  ports:
  - name: http
    port: 3004
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-4
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-5
  labels:
    app: service-5
spec:
  ports:
  - name: http
    port: 3005
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-5
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-6
  labels:
    app: service-6
spec:
  ports:
  - name: http
    port: 3006
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-6
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-7
  labels:
    app: service-7
spec:
  ports:
  - name: http
    port: 3007
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-7
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-8
  labels:
    app: service-8
spec:
  ports:
  - name: http
    port: 3008
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-8
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: service-9
  labels:
    app: service-9
spec:
  ports:
  - name: http
    port: 3009
    protocol: TCP
    targetPort: 3000
  selector:
    app: service-9
  type: LoadBalancer
